Fixed z-index
Changed positions and targeted polaroid elements

--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,10 @@ html {
   font-family: sans-serif;
 }
 
+body {
+  position: relative;
+}
+
 .polaroid {
   margin: 0;
   padding: 10px;
@@ -13,9 +17,9 @@ html {
   border-radius: 4px;
   box-shadow: 1px 4px 6px rgba(0, 0, 0, .5);
 
-  transition: all 500ms linear;
+  transition: all 300ms linear;
   position: absolute;
-  z-index: 2;
+  z-index: 1;
 }
 
 .polaroid > img {
@@ -26,8 +30,37 @@ html {
 .polaroid > figcaption {
   color: #fff;
   text-shadow: 1px 1px 3px #000;
+  position: absolute;
+  bottom: 15px;
+  left: 5em;
+}
+
+.polaroid:first-child {
+  position: absolute;
+  transform: rotate(-15deg);
+  z-index: 1;
+  left: 22%;
+  top: 6em;
+}
+
+.polaroid:nth-child(2) {
+  position: absolute;
+  transform: rotate(5deg);
+  z-index: 3;
+  left: 32%;
+  top: 10em;
+}
+
+.polaroid:last-child {
+  position: absolute;
+  transform: rotate(30deg);
+  z-index: 2;
+  left: 42%;
+  top: 7em;
 }
 
 .polaroid:hover {
   transform: rotate(0deg);
+  z-index: 10;
+  box-shadow: 5px 8px 8px rgba(0, 0, 0, .5);
 }
